--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,51 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+body,
+input,
+textarea,
+button {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.app-c-scrollbar {
+  --scrollbar-thumb-color: rgba(110, 110, 110, 0.6);
+  --scrollbar-thumb-hover-color: rgba(110, 110, 110, 1);
+  --scrollbar-thickness: 7;
+  --scrollbar-border-radius: 6px;
+  --scrollbar-offset: 2;
+}
+
+.app-c-scrollbar-padding {
+  & > .ng-scroll-content {
+    --_viewport-padding-top: 16px;
+    --_viewport-padding-bottom: 16px;
+    --_viewport-padding-left: 16px;
+    --_viewport-padding-right: 16px;
+  }
+}
+
+.app-c-home-scroll {
+  display: flex !important;
+
+  & > .ng-scroll-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+}
+
+.app-c-horizontal-scrollbar {
+  & > .ng-scroll-content {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+  }
+}
